# grnet

./: .gitignore  .readthedocs.yaml  Makefile  README.md  README.rst  description.md  jupyter.py  pyproject.toml  setup.py  synclib.py  tox.ini
docs/: conf.py  examples.rst  grnet.abstract.rst  grnet.anndata.pp.rst  grnet.anndata.rst  grnet.clusters.rst  grnet.dataset.rst  grnet.dev.rst  grnet.evaluations.rst  grnet.gene_selection.rst  grnet.models.rst  grnet.plot.rst  grnet.rst  grnet.toydata.rst  index.rst  modules.rst  requirements.txt
docs/notebooks/: .Rprofile  alluvial.ipynb  dor.ipynb  example_data.ipynb  gene_selection.ipynb  grnet  grnplot.ipynb  ot.ipynb  ot_mereu2020.ipynb  pbmc3k_viz.ipynb  pc.ipynb  planetplot.ipynb  renv  tools  toydata_viz.ipynb
grnet/: __init__.py
grnet/abstract/: _estimator.py
grnet/anndata/: __init__.py
grnet/anndata/preprocessing/: __init__.py  _binarize.py  _logtransform.py  _rpm.py
grnet/clusters/: _cellclasses.py
grnet/dataset/: __init__.py  _load_dataset.py
grnet/dev/: __init__.py  _cellclass_checker.py  _checker.py  _fig.py  _generic_types.py  _grn_checker.py  _not_type.py  _set_operations.py  _typemolds.py
grnet/evaluations/: __init__.py  _d_aster.py  _whqpm.py
grnet/gene_selection/: __init__.py  _jaccard.py  _query_formatter.py  _sym2go.py  _sym2sym.py
grnet/models/: __init__.py  _bin_pc.py  _pc.py  _pretrained.py
grnet/plot/: __init__.py  _grn.py  _planet.py
grnet/toydata/: __init__.py  _load_dataset.py
grnet/toydata/data/: metadata_prototype1.csv  metadata_prototype2.csv
grnet_sandbox/: .renvignore  Dockerfile  docker-compose.yml  edit_yml.sh  init.sh  lib.sh  notebooks  writelib.sh
grnet_sandbox/config/: requirements.txt  sandbox_reqs.txt
grnet_sandbox/data/: 10x10kc250kr.sh  10x80kc25kr.py  10x80kc25kr.sh  10xv3.sh  c1htmedium.sh  c1htsmall.sh  cellseq2.sh  celseq2.sh  ddseq.sh  dropseq.sh  filter_species.py  gmcscrbseq.sh  gmscrbseq.sh  icell8.sh  indrop.sh  make_h5ad.py  marsseq.sh  pbmc3k.sh  quartzseq2.sh  singlenuclei.sh  smartseq2.sh
grnet_sandbox/tools/: ModelMatrix.jl  __init__.py  juliapkg.json  lint.R  set_renv.R
grnet_sandbox/tools/celltypist_models/: Adult_COVID19_PBMC.pkl  Adult_CynomolgusMacaque_Hippocampus.pkl  Adult_Human_MTG.pkl  Adult_Human_PancreaticIslet.pkl  Adult_Human_PrefrontalCortex.pkl  Adult_Human_Skin.pkl  Adult_Human_Vascular.pkl  Adult_Mouse_OlfactoryBulb.pkl  Adult_Pig_Hippocampus.pkl  Adult_RhesusMacaque_Hippocampus.pkl  Adult_cHSPCs_Illumina.pkl  Adult_cHSPCs_Ultima.pkl  COVID19_HumanChallenge_Blood.pkl  Cells_Adult_Breast.pkl  Developing_Human_Gonads.pkl  Developing_Human_Hippocampus.pkl  Developing_Human_Organs.pkl  Developing_Mouse_Hippocampus.pkl  Fetal_Human_AdrenalGlands.pkl  Fetal_Human_Pancreas.pkl  Fetal_Human_Pituitary.pkl  Fetal_Human_Retina.pkl  (+19 more)
src/grnet/: __init__.py
tests/: __init__.py
tests/abstract/: test_estimator.py
tests/clusters/: test_cellclasses.py
tests/dataset/: test_load_dataset.py
tests/dev/: test_cellclass_checker.py  test_checker.py  test_fig.py  test_grn_checker.py  test_not_type.py  test_typemolds.py
tests/evaluations/: test_d_aster.py
tests/models/: test_pc.py  test_pretrained.py
tests/plot/: test_grn.py  test_planet.py
tests/toydata/: test_load_dataset.py
(+51 files in other folders)
