[tool.poetry]
name = "grnet"
version = "0.1.0"
description = "Python package for gene regulatory networks (GRN) using Bayesian network"
authors = ["yo-aka-gene <yujiokano@keio.jp>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
numpy = "<2.0"
pandas = ">=2.0.0"
matplotlib = ">=3.6.3"
pgmpy = ">=0.1.21"
anndata = ">=0.12.7,<0.13.0"
mygene = ">=3.2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
tox = "^4.3.5"
flake8 = "^6.0.0"
setuptools = "^66.1.1"
twine = "^4.0.2"
wheel = "^0.38.4"
pandoc = "^2.3"
numpydoc = "^1.5.0"
nbsphinx = "^0.8.12"
sphinx-gallery = "^0.11.1"
sphinx-rtd-theme = "^1.1.1"
sphinx = "^6.0.0"
watchdog = "^4.0.0"
scanpy = ">=1.11.5,<2.0.0"
myst-parser = "^2.0.0"
juliapkg = "^0.1.10"
leidenalg = "^0.10.2"
polars = "^0.20.10"
pyarrow = "^15.0.0"
scikit-learn = "^1.4.1.post1"
shap = "^0.44.1"
matplotlib-venn = "^0.11.10"
pot = "^0.9.3"
adjusttext = "^1.1.1"
black = "^25.12.0"
isort = "^7.0.0"
pre-commit = "^4.5.1"
jupyterlab = "^4.5.4"
ipywidgets = "^8.1.8"
scanpex = "0.2.3"
celltypist = "^1.7.1"
ipykernel = "^7.2.0"
joblib = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
